--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="education.html" target="myframe"> EDUCATION </a>  &nbsp; &nbsp;
+    <!-- <a href="education.html" target="myframe"> EDUCATION </a>  &nbsp; &nbsp;
     <a href="contactus.html"> CONTACT US </a>
     <br> <br>
     <iframe width="" height"" name="myframe">
+
+    </iframe> -->
+    <a href="assignmentcss1.html" target="myframe" >Contactus</a> &nbsp;
+    <a href="contactUs.html" target="myframe">  EDUCATION</a>
+    <br> <br>
+    <iframe width="950px" height="600px" name="myframe">
 
     </iframe>
 </body>
