updated  width and height
updated width and height

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a href="education.html" target="myframe"> EDUCATION </a>  &nbsp; &nbsp;
     <a href="contactus.html"> CONTACT US </a>
     <br> <br>
-    <iframe width="" height"" name="myframe">
+    <iframe width="600px" height="500px" name="myframe">
 
     </iframe>
 </body>
