--- a/home1.html
+++ b/home1.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Document</title>
+
+    <!-- CDN link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+
+.num,.mail,.mo{
+    color: red;
+    background-color: aqua;
+}
+
+    </style>
 </head>
+
 <body>
-    <p>
-        <h1> Professional summery</h1> 
-        <ul type"circle">
-            <li>Having 5 years of experience in developing single page web applications using Angular 13, HTML5, CSS3,Bootstrap 5, Javascript, ES6, Typescript</li>
-            <li>Experience on working with version control system - GIT and GitHub</li> 
-            <li>Experience working with JIRA for user stories and bug tracking</li> 
-            <li>Strong Debugging & Troubleshooting code experience using Chrome developer tool</li>
-            <li>Working exposure om ID's like VS Code and Notepad++</li>
-            <li>Good working experience under Agile methodologies environment </li>
-            <li>Experience in using chrome developer tool for debugging and trobule shooting the code </li>
-            <li>Knowledge of NodeJS</li>
-            <li>Knowledge of API and Database</li>
-        </ul>
-       </p>
+    <i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;<strong class="mo">Mohit sharma</strong>&nbsp;&nbsp;<i
+        class="fa fa-phone-square"
+        aria-hidden="true"></i>&nbsp;&nbsp;<strong class="num">8600&nbsp;5550&nbsp;99</strong>&nbsp;&nbsp;<i class="fa fa-envelope"
+        aria-hidden="true"></i>&nbsp;&nbsp;<strong class="mail">mohit.sharma@gmail.com</strong><br> <br>
+    <a href="home2.html" target="frame">Home</a> &nbsp; &nbsp;<a href="">TechStack</a> &nbsp; &nbsp; <a
+        href="">Education</a> &nbsp; &nbsp; <a href="">Project</a> &nbsp; &nbsp;<a href="">Hobbies</a> &nbsp; &nbsp;<a
+        href="">Personal</a> &nbsp; &nbsp;<a href="">Others</a><br> <br>
+    <iframe width="900px" height="400px" name="frame"></iframe>
 </body>
+
 </html>
