--- a/home.html
+++ b/home.html
@@ -4,11 +4,6 @@
     <title>Document</title>
 </head>
 <body>
-   <a href="home1.html" target="myframe">HOME</a> &nbsp;
-   <a href="">EDUCATION</a>
-   <br> <br>
-   <iframe width="1050px" height="600px" name="myframe">
-
-   </iframe>
+  <h3>angular</h3>
 </body>
 </html>
